--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,37 @@
 /* used colors are: #32b0ff #fc3fff*/
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background: #4d2d06;
-    font-family: Georgia, Times, serif;
-    color: #fff;
-    text-align: center;
-    font-size: 50px;    
+  background: #4d2d06;
+  font-family: Georgia, Times, serif;
+  color: #fff;
+  text-align: center;
+  font-size: 50px;
 }
 
 .primary-box {
-    background: #222;
-    color: #eee;
-    font-size: 24px;
-    margin: 0 0 10px;
-    padding: 10px;
+  background: #222;
+  color: #eee;
+  font-size: 24px;
+  margin: 0 0 10px;
+  padding: 10px;
 }
 
 .secondary-box {
-    background: #eee;
-    color: #222;
-    font-size: 24px;
-    margin: 0 0 10px;    
-    padding: 10px;
+  background: #eee;
+  color: #222;
+  font-size: 24px;
+  margin: 0 0 10px;
+  padding: 10px;
+}
+
+.blue {
+  color: rgb(0, 0, 250);
+}
+
+.pink {
+  color: rgb(250, 0, 250);
 }
